tools/c7n_azure/tests/cassettes/NetworkSecurityGroupTest.test_allow_multiple_ports.yaml
{
    "version": 1,
    "interactions": [
        {
            "request": {
                "method": "GET",
                "uri": "https://management.azure.com/subscriptions/ea42f556-5106-4743-99b0-c129bfa71a47/providers/Microsoft.Network/networkSecurityGroups?api-version=2018-12-01",
                "body": null,
                "headers": {
                    "Accept-Encoding": [
                        "gzip, deflate"
                    ],
                    "Accept": [
                        "application/json"
                    ]
                }
            },
            "response": {
                "status": {
                    "code": 200,
                    "message": "OK"
                },
                "headers": {
                    "pragma": [
                        "no-cache"
                    ],
                    "content-length": [
                        "16227"
                    ],
                    "vary": [
                        "Accept-Encoding"
                    ],
                    "date": [
                        "Fri, 26 Apr 2019 18:08:49 GMT"
                    ],
                    "content-type": [
                        "application/json; charset=utf-8"
                    ],
                    "x-ms-original-request-ids": [
                        "d895e1e5-e1df-4ad4-8fe4-9519c26c44e6",
                        "0a942f36-40b3-4209-a170-091d74b42593"
                    ],
                    "cache-control": [
                        "no-cache"
                    ],
                    "expires": [
                        "-1"
                    ]
                },
                "body": {
                    "data": {
                        "value": [
                            {
                                "name": "c7n-nsg",
                                "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg",
                                "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "location": "eastus",
                                "properties": {
                                    "provisioningState": "Succeeded",
                                    "resourceGuid": "95208bcd-d12f-484a-9e04-318db4b0a68e",
                                    "securityRules": [
                                        {
                                            "name": "test1",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test1",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "80",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 300,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test2",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test2",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 310,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [
                                                    "8080-8084",
                                                    "8086"
                                                ],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test3",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test3",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "8086",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 290,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test4",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test4",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "TCP",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 320,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test5",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test5",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "TCP",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 300,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "test6",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/test6",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "88-90",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 330,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "c7n-policy-492d7300-684c-11e9-a693-1866da09a201",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/securityRules/c7n-policy-492d7300-684c-11e9-a693-1866da09a201",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 280,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [
                                                    "1000-1100"
                                                ],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "defaultSecurityRules": [
                                        {
                                            "name": "AllowVnetInBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowVnetInBound",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowAzureLoadBalancerInBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from azure load balancer",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "AzureLoadBalancer",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllInBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/DenyAllInBound",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all inbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowVnetOutBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowVnetOutBound",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowInternetOutBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/AllowInternetOutBound",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to Internet",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "Internet",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllOutBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_networksecuritygroup/providers/Microsoft.Network/networkSecurityGroups/c7n-nsg/defaultSecurityRules/DenyAllOutBound",
                                            "etag": "W/\"e6ae17c5-d4cc-47c6-aebf-4efb91bd9a50\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all outbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ]
                                }
                            },
                            {
                                "name": "k8s-master-A61AD475-nsg",
                                "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg",
                                "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                "type": "Microsoft.Network/networkSecurityGroups",
                                "location": "southcentralus",
                                "properties": {
                                    "provisioningState": "Succeeded",
                                    "resourceGuid": "9412099d-908d-4fca-9883-951e2a9de143",
                                    "securityRules": [
                                        {
                                            "name": "allow_ssh",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg/securityRules/allow_ssh",
                                            "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow SSH traffic to master",
                                                "protocol": "Tcp",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "22-22",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 101,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "allow_kube_tls",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg/securityRules/allow_kube_tls",
                                            "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow kube-apiserver (tls) traffic to master",
                                                "protocol": "Tcp",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "443-443",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 100,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "defaultSecurityRules": [
                                        {
                                            "name": "AllowVnetInBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg/defaultSecurityRules/AllowVnetInBound",
                                            "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowAzureLoadBalancerInBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                                            "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow inbound traffic from azure load balancer",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "AzureLoadBalancer",
                                                "destinationAddressPrefix": "*",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllInBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg/defaultSecurityRules/DenyAllInBound",
                                            "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all inbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Inbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowVnetOutBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg/defaultSecurityRules/AllowVnetOutBound",
                                            "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "VirtualNetwork",
                                                "destinationAddressPrefix": "VirtualNetwork",
                                                "access": "Allow",
                                                "priority": 65000,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "AllowInternetOutBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg/defaultSecurityRules/AllowInternetOutBound",
                                            "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Allow outbound traffic from all VMs to Internet",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "Internet",
                                                "access": "Allow",
                                                "priority": 65001,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        },
                                        {
                                            "name": "DenyAllOutBound",
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/networkSecurityGroups/k8s-master-A61AD475-nsg/defaultSecurityRules/DenyAllOutBound",
                                            "etag": "W/\"04561ba9-ebb3-49f2-809e-41a0f08da050\"",
                                            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                                            "properties": {
                                                "provisioningState": "Succeeded",
                                                "description": "Deny all outbound traffic",
                                                "protocol": "*",
                                                "sourcePortRange": "*",
                                                "destinationPortRange": "*",
                                                "sourceAddressPrefix": "*",
                                                "destinationAddressPrefix": "*",
                                                "access": "Deny",
                                                "priority": 65500,
                                                "direction": "Outbound",
                                                "sourcePortRanges": [],
                                                "destinationPortRanges": [],
                                                "sourceAddressPrefixes": [],
                                                "destinationAddressPrefixes": []
                                            }
                                        }
                                    ],
                                    "subnets": [
                                        {
                                            "id": "/subscriptions/aa98974b-5d2a-4d98-a78a-382f3715d07e/resourceGroups/test_containerservice/providers/Microsoft.Network/virtualNetworks/k8s-vnet-A61AD475/subnets/k8s-subnet"
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                }
            }
        }
    ]
}
